0.5

  Fix text and attribute serialization to only quote ampersands that
  aren't already part of entities.

  Do the minimal possible thing to escape text and attribute values during
  rendering.  For text, this is escaping ampersands that aren't parts of 
  entities and the less-than (<) character.  For attribute values, this is
  amps and less-than as well as the quote (") character.  This was done
  partly because I think the spec allows it but it's also what Kid does,
  shrug.

  Change 'diffmeld()' to return a dictionary of dictionaries.  The
  dictionary returned by diffmeld has the keys 'reduced' and
  'unreduced'.  the values of both 'reduced' and 'unreduced' is
  another dictionary.  The leafmost dictionary has the keys 'added',
  'removed', and 'moved.  In the 'unreduced' dictionary, *all* meld
  tags that have been added, removed, or moved are present (this was
  the behavior of diffmeld previously).  In the 'reduced' dictionary,
  the added, removed, and moved values are reduced to the smallest
  number of tags which share a common lineage.

  Add a few speed tweaks.

  Add a meldprofile.py script.

0.4

  The clone() method of elements copied neither the text nor the tail
  of the element (this is what caused markup created by "repeats" to
  fall all on one line).

  Add diffing capability to meld nodes.  The file 'melddiff.py' shows an
  example of using the diff API.

  Add a 'meldid()' method to elements.  This returns None if the element
  has no meld id, otherwise it returns the id.

  Add a 'fillmeld(**kw)' method to elements.  This does the same thing
  as '__mod__' but returns meld ids (the keys of **kw) that cannot be
  found anywhere in the tree.

  Make source distro into a distutils-installable package.

0.3

  Fix broken example.py file.

  Add ZPT-alike methods on elements: 'content', 'replace', and
  'attributes'.  'content' replaces the node's content; 'replace'
  replaces the node itself with a text value, and 'attributes' sets